operator/gitops/argocd/pipeline-service/tekton-results/resources/server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector: {}
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
    spec:
      containers:
        - name: server
          image: quay.io/redhat-pipeline-service/tekton-results-server
          volumeMounts:
            - mountPath: /etc/tls
              name: tls
              readOnly: true
            - name: config
              mountPath: /config/env
              readOnly: true
      serviceAccountName: server
      volumes:
        - name: tls
          secret:
            secretName: server-tls
        - name: config
          configMap:
            name: server
            defaultMode: 420
