operator/gitops/argocd/pipeline-service/tekton-results/resources/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: rest
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
